[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainContainer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="MainContainer" type="Node2D"]
position = Vector2( 473, 276 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 257.45, 128.195 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 253.676, 130.206 )
current = true
zoom = Vector2( 2, 2 )

[node name="container" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBOX" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 168.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CanvasLayer/VBOX"]
margin_right = 168.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="CanvasLayer/VBOX"]
margin_top = 35.0
margin_right = 168.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchView" type="Button" parent="CanvasLayer/VBOX"]
margin_top = 70.0
margin_right = 168.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SwitchView"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBOX"]
margin_top = 105.0
margin_right = 168.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Decrease" type="Button" parent="CanvasLayer/VBOX/HBoxContainer"]
margin_right = 82.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="Increase" type="Button" parent="CanvasLayer/VBOX/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[connection signal="pressed" from="CanvasLayer/VBOX/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOX/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOX/SwitchView" to="." method="_on_SwitchView_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOX/HBoxContainer/Decrease" to="." method="_on_Decrease_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOX/HBoxContainer/Increase" to="." method="_on_Increase_pressed"]
